--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 .left-side {
-    background-image: url("assets/background.png"); /* Replace 'your-image.jpg' with your image URL */
+    background-image: url("assets/Capture.PNG"); /* Replace 'your-image.jpg' with your image URL */
     background-size: cover;
     background-position: center;
     height: 100%;
